--- a/Loups/style.css
+++ b/Loups/style.css
@@ -1,13 +1,16 @@
 #wrapper{
   background-color: #f2f2f2;
   width: 970px;
+  padding: 10px;
 }
 
 #header{
   background-color: #d9d9d9;
-  width: 900px;
+  width: 950px;
   height: 90px;
   border-radius: 20px;
+  padding-top: 5px;
+  margin: 3px 0px 25px 0px;
 }
 
 #navigation{
@@ -16,6 +19,13 @@
   height: 350px;
   border-radius: 20px;
   display: inline-block;
+  padding: 10px;
+  margin-right: 15px;
+  vertical-align: top;
+}
+
+#navigation ul{
+  margin-left: -25px;
 }
 
 #content{
@@ -24,11 +34,33 @@
   height: 450px;
   border-radius: 20px;
   display: inline-block;
+  padding: 20px;
+  margin-left: 15px;
+}
+
+#content ul li{
+  margin-bottom: 15px;
 }
 
 #footer{
   background-color: #d9d9d9;
-  width: 900px;
-  height: 90px;
+  width: 940px;
+  height: 60px;
   border-radius: 20px;
+  margin-top: 20px;
+  padding: 15px 0px;
+}
+
+#footer p{
+  margin: 10px 15px;
+}
+
+h1{
+  font-size: 50px;
+  margin-top: 15px;
+}
+
+h2{
+  font-size: 35px;
+  margin-top: -2px;
 }
